--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-flash": "^0.0.2",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
@@ -24,6 +25,7 @@
     "luxon": "^3.0.3",
     "mongoose": "^6.5.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
